--- a/saliportfolio/styles/globals.css
+++ b/saliportfolio/styles/globals.css
@@ -5,7 +5,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: #111;
-    
+     max-width: 100vw;
+    /* overflow-x: hidden;  */
 }
 
 a {
@@ -23,4 +24,6 @@ a {
 code {
   color: red;
   /* background-color: rgb(220, 220, 220); */
+  width: 600px;
+  overflow-x: auto;
 }
